--- a/server/package.json
+++ b/server/package.json
@@ -10,6 +10,7 @@
   "author": "SeHoonYang",
   "license": "MIT",
   "dependencies": {
+    "async-lock": "^1.1.3",
     "express": "^4.16.4",
     "jsonwebtoken": "^8.4.0"
   }
